--- a/index.html
+++ b/index.html
@@ -324,27 +324,78 @@
         </div>
       </section>
       <section class="section" id="instructions">
-        <h3>Инструкции по подключению</h3>
-        <div class="instructions__list">
-          <div>
-            <p>Larix</p>
-            <img src="assets/larix.png" alt="larix" />
+        <div class="instruction__banner">
+          <h3>Инструкции по подключению</h3>
+          <div class="instructions__list">
+            <div>
+              <p>Larix</p>
+              <img src="assets/larix.png" alt="larix" />
+            </div>
+            <div>
+              <p>Prism</p>
+              <img src="assets/prism.png" alt="prism" />
+            </div>
+            <div>
+              <p>Donation Alerts</p>
+              <img src="assets/donation.jpg" alt="donation" />
+            </div>
+            <div>
+              <p>OBS studio</p>
+              <img src="assets/obs_logo.png" alt="obs" />
+            </div>
+            <div>
+              <p>vMix</p>
+              <img src="assets/vmix.png" alt="vmix" id="vmix" />
+            </div>
           </div>
-          <div>
-            <p>Prism</p>
-            <img src="assets/prism.png" alt="prism" />
-          </div>
-          <div>
-            <p>Donation Alerts</p>
-            <img src="assets/donation.jpg" alt="donation" />
-          </div>
-          <div>
-            <p>OBS studio</p>
-            <img src="assets/obs_logo.png" alt="obs" />
-          </div>
-          <div>
-            <p>vMix</p>
-            <img src="assets/vmix.png" alt="vmix" id="vmix" />
+          <div class="main__instruction">
+            <h3>Первое включение табло</h3>
+            <p class="instruction__title">Включите табло в розетку 220 вольт</p>
+            <h3>Сетевые функции</h3>
+            <p class="instruction__title">Сбросьте все настройки таймера:</p>
+            <p class="instruction__info">
+              Удерживайте кнопку "6" до появления на табло ХХХХХХ Удерживайте
+              кнопку "5" до звукового сигнала от табло
+            </p>
+            <p class="instruction__title">
+              Теперь надо подключить к табло к вашей WiFi сети.
+            </p>
+            <p class="instruction__info">
+              Вам понадобятся Название вашей сети (SSID) и Пароль.
+            </p>
+            <p class="instruction__title">
+              Сейчас табло работает как точка доступа, и нам надо к ней
+              подключится.
+            </p>
+            <p class="instruction__info">
+              Табло излучает сеть с названием Game_Timer_XXX. Пароль:
+              12345678Подключитесь к этой WiFi сети на ноутбуке или телефоне.
+            </p>
+            <div class="instruction__image__container">
+              <div>
+                <p class="instruction__title">
+                  Откройте браузер, и перейдите по адресу 192.168.4.1 (это ip
+                  адрес табло по умолчанию)
+                </p>
+                <p class="instruction__info">
+                  Перед вами откроется веб-интерфейс вашего смарт-табло. Нажмите
+                  кнопку Setting в левом вернем углу
+                </p>
+              </div>
+              <img src="assets/instruct1.png" alt="инструкция" />
+            </div>
+            <div class="instruction__image__container">
+              <p class="instruction__title">
+                Теперь перейдите в Настройки сети
+              </p>
+              <img src="assets/instruct2.png" alt="инструкция" />
+            </div>
+            <div class="instruction__image__container">
+              <p class="instruction__title">
+                Введите данные вашей WiFi сети Confirm & Reboot
+              </p>
+              <img src="assets/instruct3.png" alt="инструкция" />
+            </div>
           </div>
         </div>
       </section>
