--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
             <img src="assets/chevron_right.svg" />
           </div>
           <div class="carousel__inner">
-            <div class="card">231</div>
             <div class="card">
               <div class="carousel__text__container">
                 <p class="card__title">Режим “Шут-Аут”</p>
@@ -166,7 +165,98 @@
                 <img src="assets/panel.jpg" />
               </div>
             </div>
-            <div class="card">321</div>
+            <div class="card">
+              <div class="carousel__text__container">
+                <p class="card__title">Режим “Шут-Аут”</p>
+
+                <div class="carousel__text__block">
+                  <img src="assets/strong.svg" />
+
+                  <div class="card__text">
+                    <p>
+                      Изготовлен из ударопрочного авиационного алюминия <br />
+                      Из такого алюминия делают Боинги!
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel__text__block">
+                  <img src="assets/protect.svg" />
+                  <div class="card__text">
+                    <p>
+                      Выдерживает нагрузку 220 кг Не страшно наступить или
+                      случайно сесть.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel__text__block">
+                  <img src="assets/refresh.svg" />
+                  <div class="card__text">
+                    <p>
+                      Уникальный поворотный механизм крышки Не откроется
+                      случайно в кармане или рюкзаке.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel__text__block">
+                  <img src="assets/light.svg" />
+
+                  <div class="card__text">
+                    <p>
+                      Удобно носить с собой Кейс с наушниками весит всего 49 г.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel__img__container">
+                <img src="assets/panel.jpg" />
+              </div>
+            </div>
+            <div class="card">
+              <div class="carousel__text__container">
+                <p class="card__title">Режим “Шут-Аут”</p>
+
+                <div class="carousel__text__block">
+                  <img src="assets/strong.svg" />
+
+                  <div class="card__text">
+                    <p>
+                      Изготовлен из ударопрочного авиационного алюминия <br />
+                      Из такого алюминия делают Боинги!
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel__text__block">
+                  <img src="assets/protect.svg" />
+                  <div class="card__text">
+                    <p>
+                      Выдерживает нагрузку 220 кг Не страшно наступить или
+                      случайно сесть.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel__text__block">
+                  <img src="assets/refresh.svg" />
+                  <div class="card__text">
+                    <p>
+                      Уникальный поворотный механизм крышки Не откроется
+                      случайно в кармане или рюкзаке.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel__text__block">
+                  <img src="assets/light.svg" />
+
+                  <div class="card__text">
+                    <p>
+                      Удобно носить с собой Кейс с наушниками весит всего 49 г.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel__img__container">
+                <img src="assets/panel.jpg" />
+              </div>
+            </div>
           </div>
           <div class="carousel__dots">
             <button class="carousel__dot active"></button
