add carousel functionality

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </div>
           </div>
           <div class="carousel__dots">
-            <button class="carousel__dot active"></button
+            <button class="carousel__dot"></button
             ><button class="carousel__dot"></button
             ><button class="carousel__dot"></button>
           </div>
