add carousel to main block

--- a/_old.html
+++ b/_old.html
@@ -323,3 +323,42 @@
     <img src="assets/chevron_right.svg" />
   </div>
 </div>
+
+<div class="wrapper">
+  <header class="header">
+    <nav class="menu">
+      <ul>
+        <li><a href="#main">Основная информация</a></li>
+        <li><a href="#connect">Подключение</a></li>
+        <li><a href="#pult">Пульт управления</a></li>
+        <li><a href="#mode">Режим игры</a></li>
+        <li><a href="#network">Сетевые функции</a></li>
+        <li><a href="#download">Скачивание</a></li>
+        <li><a href="#examples">Примеры использования</a></li>
+      </ul>
+    </nav>
+  </header>
+</div>
+
+<section class="section" id="gallery">
+  <div class="gallery">
+    <div class="img">
+      <img src="/assets/billiard.jpg" alt="type" />
+      <span class="img__text">Бильярд</span>
+    </div>
+    <div class="img">
+      <img src="/assets/pull.jpg" alt="type" />
+      <span class="img__text">Пул</span>
+    </div>
+    <div class="img">
+      <img src="/assets/russian.jpg" alt="type" />
+      <span class="img__text">Русский</span>
+    </div>
+    <div class="gallery__prev gallery__button">
+      <img src="assets/chevron_left.svg" />
+    </div>
+    <div class="gallery__next gallery__button">
+      <img src="assets/chevron_right.svg" />
+    </div>
+  </div>
+</section>
