--- a/_old.html
+++ b/_old.html
@@ -362,3 +362,42 @@
     </div>
   </div>
 </section>
+
+<section class="section" id="delivery">
+  <div class="delivery__scheme__container">
+    <h2>Как сделать заказ</h2>
+    <div class="delivery__scheme">
+      <div class="delivery__step">
+        <div>
+          <img src="assets/delivery1.svg" alt="заявка" />
+        </div>
+        <p>
+          Оставьте заявку на нашем сайте или позвоните по номеру <br />
+          <a href="tel:88006007529">8 (800) 600-75-29</a>
+        </p>
+      </div>
+      <div class="delivery__step">
+        <div>
+          <img src="assets/delivery2.svg" alt="доставка" />
+        </div>
+        <p>
+          Мы доставляем по всей России и странам СНГ курьером или через пункты
+          самовызова: Почта России (в т.ч. EMS), СДЭК, Boxberry и
+          Яндекс.Доставка. Доставка в Тюмени и Санкт-Петербурге – на следующий
+          день, в Москве возможна в тот же день!
+        </p>
+      </div>
+      <div class="delivery__step">
+        <div>
+          <img src="assets/delivery3.svg" alt="оплата" />
+        </div>
+        <p>
+          Оплата любым удобным способом: оплатите на сайте, картой или через СБП
+          (QR-код) со скидкой. Или при получении – наличными или картой. Если у
+          Вас возникли сложности с оплатой на сайте – менеджер магазина поможет
+          решить вопрос во время звонка для подтверждения заказа.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
