--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="features__container">
               <h2>SmartSnookerBoard</h2>
               <div class="features__colors__container">
-                <div class="color"></div>
+                <div class="color" data-slide="0"></div>
                 <p>Белый</p>
-                <div class="color"></div>
+                <div class="color" data-slide="1"></div>
                 <p>Черный</p>
-                <div class="color"></div>
+                <div class="color" data-slide="2"></div>
                 <p>Коричневый</p>
               </div>
               <div class="features__list">
@@ -82,11 +82,11 @@
             <div class="features__container">
               <h2>SmartSnookerBoard</h2>
               <div class="features__colors__container">
-                <div class="color"></div>
+                <div class="color" data-slide="0"></div>
                 <p>Белый</p>
-                <div class="color"></div>
+                <div class="color" data-slide="1"></div>
                 <p>Черный</p>
-                <div class="color"></div>
+                <div class="color" data-slide="2"></div>
                 <p>Коричневый</p>
               </div>
               <div class="features__list">
@@ -122,11 +122,11 @@
             <div class="features__container">
               <h2>SmartSnookerBoard</h2>
               <div class="features__colors__container">
-                <div class="color"></div>
+                <div class="color" data-slide="0"></div>
                 <p>Белый</p>
-                <div class="color"></div>
+                <div class="color" data-slide="1"></div>
                 <p>Черный</p>
-                <div class="color"></div>
+                <div class="color" data-slide="2"></div>
                 <p>Коричневый</p>
               </div>
               <div class="features__list">
@@ -631,23 +631,23 @@
         <div class="instruction__banner">
           <h3>Инструкции по подключению</h3>
           <div class="instructions__list">
-            <div>
+            <div onclick="window.open(`https://yandex.ru` )">
               <p>Larix</p>
               <img src="assets/larix.png" alt="larix" />
             </div>
-            <div>
+            <div onclick="window.open(`https://yandex.ru` )">
               <p>Prism</p>
               <img src="assets/prism.png" alt="prism" />
             </div>
-            <div>
+            <div onclick="window.open(`https://yandex.ru` )">
               <p>Donation Alerts</p>
               <img src="assets/donation.jpg" alt="donation" />
             </div>
-            <div>
+            <div onclick="window.open(`https://yandex.ru` )">
               <p>OBS studio</p>
               <img src="assets/obs_logo.png" alt="obs" />
             </div>
-            <div>
+            <div onclick="window.open(`https://yandex.ru` )">
               <p>vMix</p>
               <img src="assets/vmix.png" alt="vmix" id="vmix" />
             </div>
@@ -672,8 +672,8 @@
               подключится.
             </p>
             <p class="instruction__info">
-              Табло излучает сеть с названием Game_Timer_XXX. Пароль:
-              12345678Подключитесь к этой WiFi сети на ноутбуке или телефоне.
+              Табло излучает сеть с названием Game_Timer_XXX. Пароль: 12345678.
+              Подключитесь к этой WiFi сети на ноутбуке или телефоне.
             </p>
             <div class="instruction__image__container">
               <div>
@@ -699,45 +699,6 @@
                 Введите данные вашей WiFi сети Confirm & Reboot
               </p>
               <img src="assets/instruct3.png" alt="инструкция" />
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section" id="delivery">
-        <div class="delivery__scheme__container">
-          <h2>Как сделать заказ</h2>
-          <div class="delivery__scheme">
-            <div class="delivery__step">
-              <div>
-                <img src="assets/delivery1.svg" alt="заявка" />
-              </div>
-              <p>
-                Оставьте заявку на нашем сайте или позвоните по номеру <br />
-                <a href="tel:88006007529">8 (800) 600-75-29</a>
-              </p>
-            </div>
-            <div class="delivery__step">
-              <div>
-                <img src="assets/delivery2.svg" alt="доставка" />
-              </div>
-              <p>
-                Мы доставляем по всей России и странам СНГ курьером или через
-                пункты самовызова: Почта России (в т.ч. EMS), СДЭК, Boxberry и
-                Яндекс.Доставка. Доставка в Тюмени и Санкт-Петербурге – на
-                следующий день, в Москве возможна в тот же день!
-              </p>
-            </div>
-            <div class="delivery__step">
-              <div>
-                <img src="assets/delivery3.svg" alt="оплата" />
-              </div>
-              <p>
-                Оплата любым удобным способом: оплатите на сайте, картой или
-                через СБП (QR-код) со скидкой. Или при получении – наличными или
-                картой. Если у Вас возникли сложности с оплатой на сайте –
-                менеджер магазина поможет решить вопрос во время звонка для
-                подтверждения заказа.
-              </p>
             </div>
           </div>
         </div>
