--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       <section class="section banner-full-width" id="banner3">
         <h3>Пульт для рефери</h3>
       </section>
-      <section class="section">
+      <section class="section" id="pult">
         <div class="pult__container">
           <img src="assets/pult2.jpg" class="pult__image" />
           <div class="pult__features__container">
